...
import { setPropertyType, setPropertyDetails, setCustomerDetails } from "./../../reducers/Action";



const options = [
  {
    key: "Residential",
    text: "Residential"
  },
  {
    key: "Commercial",
    text: "Commercial"
  }
];

const propertyForArray = ["Rent", "Sell"];

...
    // AsyncStorage.setItem("customer", JSON.stringify(customer));
    props.setCustomerDetails(customer);
    // // console.log("1");
    navigation.navigate("ContactLocalityDetailsForm");
  };

  return (
    <View
      style={{ flex: 1, backgroundColor: "rgba(254,254,250, 0.1)" }}
    >
      <KeyboardAwareScrollView onPress={Keyboard.dismiss}>
        <ScrollView style={styles.container}>
          <View>
            <Text>
              Add new customer details who is looking to rent or buy a property
            </Text>
          </View>
          {/* <View style={styles.header}>
            <Text>Select Property Type</Text>
          </View>
          <View style={styles.propSection}>
            <RadioButton
              selectedOption={selectedPropType}
              onSelect={onSelectPropType}
              options={options}
            />
          </View>
          <View style={styles.header}>
            <Text>Select Property For</Text>
          </View>
          <View
            style={[styles.propSubSection, { marginBottom: 10, marginTop: 15 }]}
          >
            <Text>Select Property For</Text>
            <ButtonGroup
...
              }}
              containerBorderRadius={10}
            />
          </View> */}

          <View style={[styles.header, { marginTop: 30 }]}>
            <Text>Customer Details</Text>
          </View>
          <View style={styles.propSection}>
            <TextInput
              label="Name*"
              value={ownerName}
              // returnKeyType={"done"}
...
            keyboardType={"numeric"}
            returnKeyType={"done"}
            onChangeText={locality => setLocality(locality)}
          /> */}
          </View>
          <View style={{ marginTop: 20 }}>
            <Button title="NEXT" onPress={() => onSubmit()} />
          </View>
        </ScrollView>
      </KeyboardAwareScrollView>
      <Snackbar
        visible={isVisible}
        textMessage={errorMessage}
        position={"top"}
        actionHandler={() => dismissSnackBar()}
        actionText="OK"
      />
    </View>
  );
};

const styles = StyleSheet.create({
...
