...
import { setPropertyType, setPropertyDetails, setCustomerDetails } from "./../../../reducers/Action";
import CustomButtonGroup from "./../../../components/CustomButtonGroup";
import * as  AppConstant from "./../../../utils/AppConstant";


const propertyTypeArray = [
  "Shop",
  "Office",
  "Showroom",
  "Godown",
  "Restaurant / Cafe",
  "Pub / Night Club"
];
const buildingTypeArray = [
  "Businesses park ",
  "Mall",
  "StandAlone",
  "Industrial",
  "Shopping complex"
];
const idealForArrayDict = [
  { name: "Shop", checked: false },
...
  { name: "Pub/Night Club", checked: false },
  { name: "Office", checked: false },
  { name: "Showroom", checked: false },
  { name: "Godown", checked: false }
];

const parkingTypeArray = ["Must", "Doesn't matter"];
const propertyAgeArray = ["1-5", "6-10", "11-15", "20+"];
const powerBackupkArray = ["Yes", "No"];

const CustomerCommercialPropertyDetailsForm = props => {
  const { navigation } = props;

...
            <TextInput
              mode="outlined"
              style={styles.inputContainerStyle}
              label="Property Size*"
              keyboardType={"numeric"}
              returnKeyType={"done"}
              placeholder="Property Size"
              value={propertySize}
              // keyboardType={"numeric"}
              onChangeText={text => setPropertySize(text)}
              onFocus={() => setIsVisible(false)}
              theme={{
                colors: {
...
