...
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>
              {numDifferentiation(
                customerFinalDetails.customer_rent_details.expected_deposit
              )}
            </Text>
            <Text style={[styles.subDetailsTitle]}>Max Deposit</Text>
          </View>
          <View style={styles.verticalLine}></View>
          <View style={[styles.subDetails]}>
            <Text style={[styles.subDetailsValue]}>
              {customerFinalDetails.customer_property_details.furnishing_status}
            </Text>
...
      </View>

      <View style={styles.margin1}></View>
      {/* property details */}
      <View style={styles.overviewContainer}>
        <View style={styles.overview}>
          <Text>Details</Text>
          <View style={styles.horizontalLine}></View>
        </View>
        <View style={styles.overviewColumnWrapper}>
          <View style={styles.overviewLeftColumn}>
            {/* <View style={[styles.subDetails]}>
              <Text style={[styles.subDetailsValue]}>
...
            <Text>+91 {customerFinalDetails.owner_details.mobile1}</Text>
          </View>
        </View>
      </View> */}

      <View style={{ margin: 20 }}>
        <Button title="ADD" onPress={() => send()} />
      </View>
    </ScrollView>
  ) : null;
};

const styles = StyleSheet.create({
...
